[python-frontend] - add shared exception helper to pythonfrontend build

--- a/src/python-frontend/CMakeLists.txt
+++ b/src/python-frontend/CMakeLists.txt
@@ -30,6 +30,7 @@ add_library(pythonfrontend STATIC
             function_call_builder.cpp
             string_builder.cpp
             string_handler.cpp
+            exception_utils.cpp
             char_utils.cpp
             parse_float.cpp
             tuple_handler.cpp
