Update Debian packaging for ESBMC v8.0.0+fix1
- Update version to 8.0.0+fix1-1 (noble) and 8.0.0+fix1-1~jammy1 (jammy)
- Fix changelog order: noble first, then jammy
- Merge latest changes from master branch
- Update orig.tar.gz to match merged master branch
- Add clang and libclang-common runtime dependencies
- Update debian packaging files

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ src/CPackConfig.cmake
 src/CPackSourceConfig.cmake
 *.orig.tar.gz
 *.orig.tar.xz
+
+# Debian packaging: embedded third-party libraries
+# These are downloaded during package preparation, not committed to repo
+debian/embedded-libs/
