--- a/debian/control
+++ b/debian/control
@@ -18,11 +18,10 @@ Build-Depends: debhelper-compat (= 13),
                libclang-common-16-dev | libclang-common-14-dev,
                libclang-cpp16-dev | libclang-cpp14-dev,
                clang-16 | clang-14,
-               libc6-dev,
+               libc6-dev (>= 2.17),
                linux-libc-dev,
                gcc-multilib,
-               python3-dev,
-               python3-pip
+               python3-dev
 Standards-Version: 4.6.2
 Homepage: https://esbmc.org
 Vcs-Browser: https://github.com/esbmc/esbmc
@@ -33,7 +32,6 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
          python3,
          python3-mypy,
-         python3-pip,
          libstdc++6,
          libstdc++-dev,
          clang-16 | clang-14 | clang,
@@ -46,5 +44,5 @@ Description: Efficient SMT-based Context-Bounded Model Checker
  .
  ESBMC supports the Clang compiler as a frontend and uses SMT solvers
  to perform the verification. This package includes support for the Z3
- SMT solver and Python frontend (requires python3-ast2json package or
- installation via pip).
+ SMT solver and Python frontend. The ast2json dependency is bundled
+ in the package and does not require external installation.
