feat: time operational model

--- a/src/c2goto/headers/CMakeLists.txt
+++ b/src/c2goto/headers/CMakeLists.txt
@@ -7,6 +7,7 @@ set(inputs
            stddef.h
            stdlib.h
            string.h
+           time.h
            __esbmc/stddefs.h
            semaphore.h
 
