[python] extract lambda operations to dedicated python_lambda class
Moves lambda expression handling from python_converter to a new
python_lambda class, following the same pattern as tuple_handler
and dict_handler. Improves code organization and maintainability.

--- a/src/python-frontend/CMakeLists.txt
+++ b/src/python-frontend/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(pythonfrontend STATIC
             python_class.cpp
             python_class_builder.cpp
             python_dict_handler.cpp
+            python_lambda.cpp
             python_list.cpp
             python_math.cpp
             python_set.cpp
