--- a/src/clang-c-frontend/CMakeLists.txt
+++ b/src/clang-c-frontend/CMakeLists.txt
@@ -12,7 +12,7 @@ target_include_directories(clangcfrontend_stuff
     PRIVATE ${Boost_INCLUDE_DIRS}
     PRIVATE ${CMAKE_CURRENT_BINARY_DIR}
 )
-target_compile_definitions(clangcfrontend_stuff PUBLIC BOOST_ALL_NO_LIB)
+target_compile_definitions(clangcfrontend_stuff PUBLIC BOOST_ALL_NO_LIB YAML_CPP_STATIC_DEFINE)
 target_link_libraries(clangcfrontend_stuff gotoprograms ${cheaders_lib} ${ESBMC_CLANG_LIBS})
 
 add_library(clangcfrontend INTERFACE)
