[python] fix regression tests to use wrapper functions for field access
ESBMC requires attribute access on class instances to go through
function parameters (symbol->is_parameter check). Wrap field reads
in helper functions to work within this constraint.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "esbmc"
-version = "0.1.0"
-description = "Add your description here"
-requires-python = ">=3.13"
+version = "8.0.0"
+description = "ESBMC Python frontend development dependencies"
+requires-python = ">=3.10"
 dependencies = [
     "ast2json>=0.4",
     "mypy>=1.19.1",
