--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -63,6 +63,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Prepare dependencies (outside CodeQL tracing)
+      if: matrix.build-mode == 'manual'
+      shell: bash
+      run: |
+        ./scripts/build.sh deps
+
     # Add any setup steps before running the `github/codeql-action/init` action.
     # This includes steps like installing compilers or runtimes (`actions/setup-node`
     # or others). This is typically only required for manual builds.
@@ -92,7 +98,7 @@ jobs:
       if: matrix.build-mode == 'manual'
       shell: bash
       run: |
-        ./scripts/build.sh
+        ./scripts/build.sh build install
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4
