--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Runs testing tool unit test
       run: cd regression && python3 testing_tool_test.py
- 
+
   # Build developer doc
   build-developer-doc:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Developer-Manual
-        path: manual.pdf    
+        path: manual.pdf
 
   build-ubuntu:
     uses: ./.github/workflows/build-unix.yml
@@ -48,7 +48,7 @@ jobs:
     uses: ./.github/workflows/build-unix.yml
     name: ARM64 linux build
     with:
-      operating-system: ARM64
+      operating-system: ubuntu-24.04-arm
       build-flags: '-b DebugOpt -S OFF -B OFF -c 13'
       testing: false
 
