--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -49,7 +49,7 @@ jobs:
     name: ARM64 linux build
     with:
       operating-system: ubuntu-24.04-arm
-      build-flags: '-b DebugOpt -S OFF -B OFF -c 13'
+      build-flags: '-b DebugOpt -S OFF -B OFF'
       testing: false
 
   build-macos-arm:
