--- a/src/python-frontend/CMakeLists.txt
+++ b/src/python-frontend/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(pythonfrontend STATIC
             python_converter.cpp
             python_class.cpp
             python_class_builder.cpp
+            python_consteval.cpp
             python_dict_handler.cpp
             python_exception_handler.cpp
             python_lambda.cpp
