--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       operating-system: ${{ matrix.os }}
-      build-flags: '-b RelWithDebInfo -e Off'
+      build-flags: '-b RelWithDebInfo -e OFF'
       testing: false
 
   create-release:
@@ -25,7 +25,7 @@ jobs:
       - name: Download Linux Build
         uses: actions/download-artifact@v4
         with:
-          name: 'release-ubuntu-24.04--b RelWithDebInfo -e Off'
+          name: 'release-ubuntu-24.04--b RelWithDebInfo -e OFF'
           path: ./linux-release
       - name: Create Linux Release file
         run: zip -r esbmc-linux.zip ./linux-release
